; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_dwarf-aux.c_die_find_inlinefunc.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_dwarf-aux.c_die_find_inlinefunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__die_find_inline_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @die_find_inlinefunc(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @__die_find_inline_cb, align 4
  %11 = call i32* @die_find_child(i32* %9, i32 %10, i32* %6, i32* %8)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %28

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %19, %15
  %17 = load i32*, i32** %5, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %16
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @memcpy(i32* %20, i32* %21, i32 4)
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* @__die_find_inline_cb, align 4
  %25 = call i32* @die_find_child(i32* %23, i32 %24, i32* %6, i32* %8)
  store i32* %25, i32** %5, align 8
  br label %16

26:                                               ; preds = %16
  %27 = load i32*, i32** %7, align 8
  store i32* %27, i32** %4, align 8
  br label %28

28:                                               ; preds = %26, %14
  %29 = load i32*, i32** %4, align 8
  ret i32* %29
}

declare dso_local i32* @die_find_child(i32*, i32, i32*, i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
